test/sema/typeck/operator/binary-mod-string.out
error: binary operator `%` can not handle expression of type `String % String`
--> binary-mod-string.dora:1:19
 | fn f(a: String) { a%a; }
                     ~~~
 | 
1 error found.
